--- a/.github/workflows/rust-staging-build.yml
+++ b/.github/workflows/rust-staging-build.yml
@@ -132,24 +132,62 @@ jobs:
           Release/Carbon.Windows.Debug.zip
           Release/Carbon.Windows.Debug.info
 
-  # ARTIFACTS WINDOWS --------------------------------------------------------------
-  artifacts:
-    runs-on: windows-latest
+  # RELEASE --------------------------------------------------------------------
+  release-on-schedule:
+    name: 💾 Preview Release
     needs: [ "bootstrap", "build-linux", "build-windows" ]
-    continue-on-error: true
+    runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' }}
+    # only release if triggered by the scheduler
+    # or if manually triggered by a developer
+
     steps:
-      - name: Install Jekyll
-        run: gem install jekyll
-        
-      - name: Build Jekyll site
-        run: bundle exec jekyll build
-        
-      - name: Publish artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: ruststaging
-          path: |
-            Release/Carbon.Windows.Debug.info
-            Release/Carbon.Windows.Debug.zip
-            Release/Carbon.Linux.Debug.info
-            Release/Carbon.Linux.Debug.tar.gz
+    - name: 🗑️ Delete existing release tag
+      uses: dev-drprasad/delete-tag-and-release@92d94d77429cb0436597047a92369526a5824f50
+      with:
+        delete_release: true
+        tag_name: rustbeta_staging_build
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: 💤 Sleep for 10 seconds
+      run: sleep 10s
+      shell: bash
+
+    - name: ⬇️ Download artifacts
+      uses: actions/download-artifact@v3
+      with:
+        path: Release
+
+    - name: Display structure of downloaded files
+      run: ls -R
+      working-directory: Release
+
+    - name: 🏷️ Update release tag
+      uses: softprops/action-gh-release@d4e8205d7e959a9107da6396278b2f1f07af0f9b
+      with:
+        draft: false
+        prerelease: true
+        tag_name: rustbeta_staging_build
+        name: 'Rust (Staging) Build — v${{ needs.bootstrap.outputs.version }}'
+        body: |
+          This is a manually triggered development build of Carbon based on the `rust_beta/staging` branch.
+          This build might and probably will be very unstable and its sole purpose is for testing and/or exploring Rust's future update features in a modded environment.
+                  
+          This build is targeted at developers or testers.
+          The general public is advised to use one of the [stable] builds.
+          Since it's manually triggered, we're confident you should use this build to test out the latest Carbon changes.
+
+          ### How to install
+          1. Download the `Carbon.[Windows|Linux].Debug` archive from the attachments below.
+          2. Unzip the archive to the root of your Rust Dedicated Server.
+          3. Restart the server and enjoy.
+          
+          ${{ needs.build-linux.outputs.build_info }}
+
+          [stable]: https://github.com/CarbonCommunity/Carbon.Core/releases/latest
+        files: |
+          Release/build-staging-linux/Carbon.Linux.Debug.info
+          Release/build-staging-linux/Carbon.Linux.Debug.tar.gz
+          Release/build-staging-windows/Carbon.Windows.Debug.info
+          Release/build-staging-windows/Carbon.Windows.Debug.zip
