--- a/.github/workflows/rust-staging-build.yml
+++ b/.github/workflows/rust-staging-build.yml
@@ -134,7 +134,7 @@ jobs:
 
   # RELEASE --------------------------------------------------------------------
   release-on-schedule:
-    name: 💾 Preview Release
+    name: 💾 Rust (Staging) Release
     needs: [ "bootstrap", "build-linux", "build-windows" ]
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' }}
