Command manager revamp; Added argument tokens Added (argument) command type

--- a/Carbon.Core/Carbon.SDK/Carbon.SDK.csproj
+++ b/Carbon.Core/Carbon.SDK/Carbon.SDK.csproj
@@ -10,6 +10,9 @@
 	<ItemGroup>
 		<Reference Include="$(SolutionDir)..\Rust\$(OperatingSystem)\RustDedicated_Data\Managed\UnityEngine.dll" Private="false" />
 		<Reference Include="$(SolutionDir)..\Rust\$(OperatingSystem)\RustDedicated_Data\Managed\UnityEngine.CoreModule.dll" Private="false" />
+		<Reference Include="Newtonsoft.Json">
+		  <HintPath>..\..\Rust\windows\RustDedicated_Data\Managed\Newtonsoft.Json.dll</HintPath>
+		</Reference>
 	</ItemGroup>
 
 	<Target Name="CustomRelease" AfterTargets="Build" DependsOnTargets="PrepareRelease">
