Metadata update NuGet build & publishing

--- a/Carbon.Core/.msbuild/Common.props
+++ b/Carbon.Core/.msbuild/Common.props
@@ -26,8 +26,8 @@
 	<PropertyGroup>
 		<Authors>Carbon Community</Authors>
 		<Copyright>Copyright © 2022-$([System.DateTime]::Now.Year) $(Authors)</Copyright>
-		<PackageProjectUrl>https://discord.gg/eXPcNKK4yd</PackageProjectUrl>
-		<RepositoryUrl>https://github.com/Carbon-Modding/Carbon.Core</RepositoryUrl>
+		<PackageProjectUrl>https://discord.gg/carbonmod</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/CarbonCommunity/Carbon.Core</RepositoryUrl>
 		<Description>A very lightweight and modular Harmony-based modding framework</Description>
 	</PropertyGroup>
 
