--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -3,6 +3,13 @@
 		<Product>Carbon</Product>
 		<OutputType>Library</OutputType>
 		<ProjectGuid>{DB7AC4B9-E0F3-4E8F-B977-DD32709359A4}</ProjectGuid>
+		<Title>Carbon</Title>
+		<GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+		<RepositoryUrl>https://github.com/CarbonCommunity/Carbon.Core</RepositoryUrl>
+		<PackageId>Carbon</PackageId>
+		<IsPackable>true</IsPackable>
+		<NuspecFile>..\.nuspec</NuspecFile>
+		<NuspecProperties>version=$(PackageVersion)</NuspecProperties>
 	</PropertyGroup>
 
 	<Import Project="$(SolutionDir)\.msbuild\Common.props" />
