--- a/Carbon.Core/.msbuild/References.props
+++ b/Carbon.Core/.msbuild/References.props
@@ -18,8 +18,8 @@
 
 		<!-- Roslyn -->
 		<PackageReference Include="Roslynator.CSharp" Version="4.2.0" />
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.6.0-1.final" />
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.6.0-1.final" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.5.0" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.5.0" />
 
 		<!-- Unity code analyzers -->
 		<PackageReference Include="Microsoft.Unity.Analyzers" Version="1.16.1">
