--- a/Carbon.Core/.nuspec
+++ b/Carbon.Core/.nuspec
@@ -7,12 +7,15 @@
     <authors>Carbon Community</authors>
     <owners></owners>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
-    <licenseUrl>https://raw.githubusercontent.com/CarbonCommunity/Carbon.Core/develop/LICENSE</licenseUrl>
+    <license type="expression">GPL-3.0-only</license>
     <icon>NuGet-ICON.png</icon>
     <readme>NuGet-README.md</readme>
     <projectUrl>https://github.com/CarbonCommunity/Carbon.Core</projectUrl>
     <description>Carbon is a self-updating, lightweight, intelligent mod loader for Rust utilizing the latest C# and Harmony for the best performance and stability possible, fully compatible with Oxide.</description>
     <copyright>Copyright © 2022-2023 Carbon Community</copyright>
+    <dependencies>
+      <group targetFramework=".NETFramework4.8" />
+	</dependencies>
   </metadata>
   <files>
     <file src="..\Release\.tmp\Debug\carbon\managed\Carbon.Common.dll" target="lib\netframework4.8\Carbon.Common.dll" />
