--- a/Carbon.Core/.nuspec
+++ b/Carbon.Core/.nuspec
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
-    <id>Carbon Framework</id>
+    <id>Carbon.Community</id>
     <version>1.0.0</version>
     <title>Carbon</title>
     <authors>Carbon Community</authors>
