--- a/Carbon.Core/Carbon.Common/Carbon.Common.csproj
+++ b/Carbon.Core/Carbon.Common/Carbon.Common.csproj
@@ -15,6 +15,7 @@
 		<PackageReference Include="QRCoder" Version="1.4.3" />
 		<PackageReference Include="SharpCompress" Version="0.32.2" />
 		<PackageReference Include="System.Data.SQLite" Version="1.0.117" />
+		<PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
 	</ItemGroup>
 
 	<ItemGroup>
