--- a/.github/workflows/branch-merge.yml
+++ b/.github/workflows/branch-merge.yml
@@ -14,6 +14,7 @@ on:
         default: 'develop'
         type: choice
         options:
+          - preproduction
           - develop
 
       target:
