--- a/.github/workflows/branch-merge.yml
+++ b/.github/workflows/branch-merge.yml
@@ -11,7 +11,7 @@ on:
       source:
         description: 'From branch'
         required: true
-        default: 'develop'
+        default: 'preproduction'
         type: choice
         options:
           - preproduction
