--- a/Carbon.Core/Carbon.Common/Carbon.Common.csproj
+++ b/Carbon.Core/Carbon.Common/Carbon.Common.csproj
@@ -9,6 +9,7 @@
 	<Import Project="$(SolutionDir)\.msbuild\ReferencesRust.props" />
 
 	<ItemGroup>
+		<PackageReference Include="Ben.Demystifier" Version="0.4.1" />
 		<PackageReference Include="MySql.Data" Version="8.0.32.1" />
 		<PackageReference Include="protobuf-net.Core" Version="3.1.17" />
 		<PackageReference Include="protobuf-net" Version="3.1.17" />
