Include Rust beta branches for targets in branch-merge.yml

--- a/.github/workflows/branch-merge.yml
+++ b/.github/workflows/branch-merge.yml
@@ -27,6 +27,9 @@ on:
           - preview
           - preproduction
           - production
+          - rust_beta/aux01
+          - rust_beta/aux02
+          - rust_beta/staging
 
 jobs:
   merge:
