--- a/Carbon.Core/Carbon.Common/Carbon.Common.csproj
+++ b/Carbon.Core/Carbon.Common/Carbon.Common.csproj
@@ -17,6 +17,7 @@
 		<PackageReference Include="QRCoder" Version="1.4.3" />
 		<PackageReference Include="SharpCompress" Version="0.32.2" />
 		<PackageReference Include="System.Data.SQLite" Version="1.0.117" />
+		<PackageReference Include="System.IO.Compression" Version="4.3.0" />
 	</ItemGroup>
 
 	<ItemGroup>
