--- a/Carbon.Core/.msbuild/Configurations.props
+++ b/Carbon.Core/.msbuild/Configurations.props
@@ -29,6 +29,22 @@
 				<ConfigurationNormalized>Release</ConfigurationNormalized>
 			</PropertyGroup>
 		</When>
+		<When Condition="$(Configuration.Contains('Minimal'))">
+			<PropertyGroup>
+				<DebugType>none</DebugType>
+				<DebugSymbols>false</DebugSymbols>
+				<DefineConstants>MINIMAL;$(DefineConstants)</DefineConstants>
+				<Optimize>true</Optimize>
+				<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+
+				<!-- We want to override corelib to have the new lang features -->
+				<WarningsNotAsErrors>CS1685</WarningsNotAsErrors>
+				<NoWarn>CS1685</NoWarn>
+
+				<!-- -->
+				<ConfigurationNormalized>Minimal</ConfigurationNormalized>
+			</PropertyGroup>
+		</When>
 		<Otherwise>
 			<PropertyGroup>
 				<!-- Changed due to FP_73186 changeset -->
