--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -77,6 +77,7 @@ jobs:
       run: |
         export VERSION=${{ needs.bootstrap.outputs.version }}
         ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh ReleaseUnix
+        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh MinimalUnix
         
     - name: ⬆️ Upload the artifacts
       uses: actions/upload-artifact@v3
@@ -85,6 +86,8 @@ jobs:
         path: |
           Release/Carbon.Linux.Release.tar.gz
           Release/Carbon.Linux.Release.info
+          Release/Carbon.Linux.Minimal.tar.gz
+          Release/Carbon.Linux.Minimal.info
 
   # BUILD WINDOWS --------------------------------------------------------------
   build-windows:
@@ -113,7 +116,8 @@ jobs:
       shell: cmd
       run: |
         set VERSION=${{ needs.bootstrap.outputs.version }}
-        %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Release
+        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Release
+        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Minimal
 
     - name: ⬆️ Upload the artifacts
       uses: actions/upload-artifact@v3
@@ -122,6 +126,8 @@ jobs:
         path: |
           Release/Carbon.Windows.Release.zip
           Release/Carbon.Windows.Release.info
+          Release/Carbon.Windows.Minimal.zip
+          Release/Carbon.Windows.Minimal.info
 
     - name: 🔨 Upload NuGet package
       shell: cmd
@@ -179,3 +185,7 @@ jobs:
           Release/build-production-linux/Carbon.Linux.Release.tar.gz
           Release/build-production-windows/Carbon.Windows.Release.info
           Release/build-production-windows/Carbon.Windows.Release.zip
+          Release/build-preview-linux/Carbon.Linux.Minimal.info
+          Release/build-preview-linux/Carbon.Linux.Minimal.tar.gz
+          Release/build-preview-windows/Carbon.Windows.Minimal.info
+          Release/build-preview-windows/Carbon.Windows.Minimal.zip
