--- a/.github/workflows/rust-aux01-build.yml
+++ b/.github/workflows/rust-aux01-build.yml
@@ -81,6 +81,7 @@ jobs:
       run: |
         export VERSION=${{ needs.bootstrap.outputs.version }}
         ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh DebugUnix
+        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh MinimalUnix
         
     - name: ⬆️ Upload the artifacts
       uses: actions/upload-artifact@v3
@@ -89,6 +90,8 @@ jobs:
         path: |
           Release/Carbon.Linux.Debug.tar.gz
           Release/Carbon.Linux.Debug.info
+          Release/Carbon.Linux.Minimal.tar.gz
+          Release/Carbon.Linux.Minimal.info
 
   # BUILD WINDOWS --------------------------------------------------------------
   build-windows:
@@ -122,7 +125,8 @@ jobs:
       shell: cmd
       run: |
         set VERSION=${{ needs.bootstrap.outputs.version }}
-        %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Debug
+        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Debug
+        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Minimal
 
     - name: ⬆️ Upload the artifacts
       uses: actions/upload-artifact@v3
@@ -131,6 +135,8 @@ jobs:
         path: |
           Release/Carbon.Windows.Debug.zip
           Release/Carbon.Windows.Debug.info
+          Release/Carbon.Windows.Minimal.zip
+          Release/Carbon.Windows.Minimal.info
 
   # RELEASE --------------------------------------------------------------------
   release-on-schedule:
@@ -191,3 +197,7 @@ jobs:
           Release/build-aux01-linux/Carbon.Linux.Debug.tar.gz
           Release/build-aux01-windows/Carbon.Windows.Debug.info
           Release/build-aux01-windows/Carbon.Windows.Debug.zip
+          Release/build-aux01-linux/Carbon.Linux.Minimal.info
+          Release/build-aux01-linux/Carbon.Linux.Minimal.tar.gz
+          Release/build-aux01-windows/Carbon.Windows.Minimal.info
+          Release/build-aux01-windows/Carbon.Windows.Minimal.zip
