--- a/.github/workflows/rust-staging-build.yml
+++ b/.github/workflows/rust-staging-build.yml
@@ -80,8 +80,8 @@ jobs:
       shell: bash
       run: |
         export VERSION=${{ needs.bootstrap.outputs.version }}
-        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh DebugUnix
-        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh MinimalUnix
+        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh DebugUnix STAGING
+        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh MinimalUnix STAGING
         
     - name: ⬆️ Upload the artifacts
       uses: actions/upload-artifact@v3
@@ -125,8 +125,8 @@ jobs:
       shell: cmd
       run: |
         set VERSION=${{ needs.bootstrap.outputs.version }}
-        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Debug
-        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Minimal
+        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Debug STAGING
+        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Minimal STAGING
 
     - name: ⬆️ Upload the artifacts
       uses: actions/upload-artifact@v3
