--- a/.github/workflows/preview-build.yml
+++ b/.github/workflows/preview-build.yml
@@ -7,7 +7,15 @@ concurrency: build-2-preview
 
 on:
   workflow_dispatch:
-
+    inputs:
+      staging:
+        description: 'Staging Branch'
+        required: false
+        default: 'false'
+        type: choice
+        options:
+          - 'false'
+          - 'true'
 jobs:
   bootstrap:
     name: 🥾 Bootstrap
@@ -65,6 +73,12 @@ jobs:
       run: |
         ${GITHUB_WORKSPACE}/Tools/Build/linux/bootstrap.sh
 
+    - name: 🔨 Setup the Carbon build environment (Staging)
+      shell: bash
+      run: |
+        ${GITHUB_WORKSPACE}/Tools/Build/linux/update_staging.sh
+      if: ${{ inputs.staging == 'true' }}
+      
     - name: 🐧 Built Carbon on Linux
       shell: bash
       run: |
@@ -105,6 +119,12 @@ jobs:
       run: |
         %GITHUB_WORKSPACE%\Tools\Build\win\bootstrap.bat
 
+    - name: 🔨 Setup the Carbon build environment (Staging)
+      shell: cmd
+      run: |
+        %GITHUB_WORKSPACE%\Tools\Build\win\update_staging.bat
+      if: ${{ inputs.staging == 'true' }}
+      
     - name: 🔨 Built Carbon on Windows
       shell: cmd
       run: |
