--- a/Carbon.Core/.msbuild/Tasks.targets
+++ b/Carbon.Core/.msbuild/Tasks.targets
@@ -31,6 +31,10 @@
 			<Output TaskParameter="ConsoleOutput" PropertyName="GitCommitBranch" />
 		</Exec>
 
+		<Exec Command="git show --pretty= --name-status" ConsoleToMSBuild="true" StandardOutputImportance="low">
+			<Output TaskParameter="ConsoleOutput" PropertyName="GitCommitChanges" />
+		</Exec>
+		
 		<Exec Command="git rev-parse --short HEAD" ConsoleToMSBuild="true" StandardOutputImportance="low">
 			<Output TaskParameter="ConsoleOutput" PropertyName="GitCommitHashShort" />
 		</Exec>
@@ -63,6 +67,7 @@
 			<GitCommitAuthor>$(GitCommitAuthor)</GitCommitAuthor>
 			<GitCommitComment>$(GitCommitComment)</GitCommitComment>
 			<GitCommitDate>$(GitCommitDate)</GitCommitDate>
+			<GitCommitChanges>$(GitCommitChanges)</GitCommitChanges>
 			<GitTag>-$(GitCommitBranch)-$(GitCommitHashShort)</GitTag>
 		</PropertyGroup>
 
@@ -75,6 +80,7 @@
 		<WriteLinesToFile File="$(MSBuildProjectDirectory)\bin\.gitauthor" Overwrite="true" Lines="$(GitCommitAuthor)" />
 		<WriteLinesToFile File="$(MSBuildProjectDirectory)\bin\.gitcomment" Overwrite="true" Lines="$(GitCommitComment)" />
 		<WriteLinesToFile File="$(MSBuildProjectDirectory)\bin\.gitdate" Overwrite="true" Lines="$(GitCommitDate)" />
+		<WriteLinesToFile File="$(MSBuildProjectDirectory)\bin\.gitchanges" Overwrite="true" Lines="$(GitCommitChanges)" />
 	</Target>
 
 	<!--
