--- a/Carbon.Core/Carbon.Common/src/Carbon/Build.cs.template
+++ b/Carbon.Core/Carbon.Common/src/Carbon/Build.cs.template
@@ -55,6 +55,9 @@ public class Build
 		public static readonly string Comment = @"[GIT_COMMENT]";
 		public static readonly string Date = @"[GIT_DATE]";
 
+		public static readonly string HashShort = @"[GIT_HASH_SHORT]";
+		public static readonly string HashLong = @"[GIT_HASH_LONG]";
+
 		public static readonly string Url = @"[GIT_URL]";		
 
 		public static readonly AssetChange[] Changes;
