--- a/Carbon.Core/.msbuild/Metadata.props
+++ b/Carbon.Core/.msbuild/Metadata.props
@@ -20,23 +20,10 @@
 		otherwise use nothing.
 	-->
 	<Choose>
-		<When Condition="Exists('$(MSBuildProjectDirectory)\bin\.gittag')">
-			<PropertyGroup>
-				<GitCommitBranch>$([System.IO.File]::ReadAllText('$(SolutionDir)..\.tmp\.gitbranch').Trim())</GitCommitBranch>
-				<GitCommitHashLong>$([System.IO.File]::ReadAllText('$(SolutionDir)..\.tmp\.gitchl').Trim())</GitCommitHashLong>
-				<GitCommitHashShort>$([System.IO.File]::ReadAllText('$(SolutionDir)..\.tmp\.gitchs').Trim())</GitCommitHashShort>
-				<GitCommitUrl>$([System.IO.File]::ReadAllText('$(SolutionDir)..\.tmp\.giturl').Trim())</GitCommitUrl>
-				<GitCommitAuthor>$([System.IO.File]::ReadAllText('$(SolutionDir)..\.tmp\.gitauthor').Trim())</GitCommitAuthor>
-				<GitCommitComment>$([System.IO.File]::ReadAllText('$(SolutionDir)..\.tmp\.gitcomment').Trim())</GitCommitComment>
-				<GitCommitDate>$([System.IO.File]::ReadAllText('$(SolutionDir)..\.tmp\.gitdate').Trim())</GitCommitDate>
-				<GitCommitChanges>$([System.IO.File]::ReadAllText('$(SolutionDir)..\.tmp\.gitchanges').Replace("	", " ").Trim())</GitCommitChanges>
-				<InformationalVersion>$(VersionPrefix)-$(VersionSuffix)-$(GitCommitBranch)-$(GitCommitHashShort))</InformationalVersion>
-			</PropertyGroup>
-		</When>
-		<Otherwise>
+		<When Condition="!Exists('$(SolutionDir)..\.tmp\.gitbranch')">
 			<PropertyGroup>
 				<InformationalVersion>$(VersionPrefix)-$(VersionSuffix)</InformationalVersion>
 			</PropertyGroup>
-		</Otherwise>
+		</When>
 	</Choose>
 </Project>
